# Symplhy-Ordeq

./: viz.py
Kedro/: .gitignore  SHOWCASE_PLAN.md  pyproject.toml
Kedro/conf/base/: catalog.yml  logging.yml  parameters.yml
Kedro/models/: random_forest.pkl
Kedro/outputs/: classical_ml_pipeline.mermaid  llm_pipeline.mermaid
Kedro/src/kedro_showcase/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
Kedro/src/kedro_showcase/datasets/: __init__.py  huggingface_dataset.py
Kedro/src/kedro_showcase/pipelines/: __init__.py
Kedro/src/kedro_showcase/pipelines/classical_ml/: __init__.py  nodes.py  pipeline.py
Kedro/src/kedro_showcase/pipelines/llm/: __init__.py  nodes.py  pipeline.py
Kedro/src/ordeq_showcase/: custom_io.py
Kedro/tests/: test_llm_pipeline.py  test_pipeline_structure.py  test_preprocessing.py
Ordeq/: pyproject.toml  viz.py
Ordeq/data/processed/: X_test.npy  X_train.npy  emotion_clean.csv  iris_features.parquet  y_test.npy  y_train.npy
Ordeq/data/raw/: emotion.csv
Ordeq/outputs/: llm_results.csv  ml_metrics.yml
Ordeq/src/ordeq_showcase/: __init__.py  catalog.py  hooks.py  matplotlib_figure.py
Ordeq/src/ordeq_showcase/classical_ml/: evaluation.py  preprocessing.py  training.py
Ordeq/src/ordeq_showcase/llm_pipeline/: data_prep.py
Ordeq/tests/: test_llm_pipeline.py  test_preprocessing.py
outputs/: llm_metrics.yml
src/ordeq_showcase/: __main__.py  catalog.py
src/ordeq_showcase/classical_ml/: preprocessing.py
src/ordeq_showcase/llm_pipeline/: analysis.py  data_prep.py  inference.py
